--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hw-07</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <ul id="categories">
@@ -40,9 +41,12 @@
       </ul>
 
       <ul id="ingredients"></ul>
+
+      <ul id="gallery"></ul>
+
     <!-- <script src="./js/task-1.js" type="module"></script> -->
-    <script src="./js/task-2.js" type="module"></script>
-    <!-- <script src="./js/task-3.js" type="module"></script> -->
+    <!-- <script src="./js/task-2.js" type="module"></script> -->
+    <script src="./js/task-3.js" type="module"></script>
     <!-- <script src="./js/task-4.js" type="module"></script> -->
     <!-- <script src="./js/task-5.js" type="module"></script> -->
     <!-- <script src="./js/task-6.js" type="module"></script> -->
