--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
         data-length="6"
         placeholder="Введи 6 символов"/>
 
+
+        <input id="font-size-control" type="range" />
+        <br />
+        <span id="text">Абракадабра!</span>
     
 
 
@@ -68,8 +72,8 @@
     <!-- <script src="./js/task-3.js" type="module"></script> -->
     <!-- <script src="./js/task-4.js" type="module"></script> -->
     <!-- <script src="./js/task-5.js" type="module"></script> -->
-    <script src="./js/task-6.js" type="module"></script>
-    <!-- <script src="./js/task-7.js" type="module"></script> -->
+    <!-- <script src="./js/task-6.js" type="module"></script> -->
+    <script src="./js/task-7.js" type="module"></script>
     <!-- <script src="./js/task-8.js" type="module"></script> -->
     <!-- <script src="./js/task-10.js" type="module"></script> -->
     
